--- a/BlackSys/Views/AdminUsers/Create.cshtml
+++ b/BlackSys/Views/AdminUsers/Create.cshtml
@@ -39,27 +39,27 @@
                             </div>
                         </div>
 
-                        <div class="form-group form-md-line-input has-info">
+                        @*<div class="form-group form-md-line-input has-info">
                             @Html.LabelFor(model => model.Address, null, new { @class = "control-label col-md-2", @placeholder = "password" })
                             <div class="col-md-4">
                                 @Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
                                 <div class="form-control-focus"> </div>
                             </div>
-                        </div>
-                        <div class="form-group  form-md-line-input has-info">
+                        </div>*@
+                        @*<div class="form-group  form-md-line-input has-info">
                             @Html.LabelFor(model => model.State, new { @class = "control-label col-md-2" })
                             <div class="col-md-4">
                                 @Html.TextBoxFor(m => m.State, new { @class = "form-control" })
                                 <div class="form-control-focus"> </div>
                             </div>
-                        </div>
-                        <div class="form-group form-md-line-input has-info">
+                        </div>*@
+                        @*<div class="form-group form-md-line-input has-info">
                             @Html.LabelFor(model => model.PostalCode, new { @class = "control-label col-md-2" })
                             <div class="col-md-4">
                                 @Html.TextBoxFor(m => m.PostalCode, new { @class = "form-control" })
                                 <div class="form-control-focus"> </div>
                             </div>
-                        </div>
+                        </div>*@
                         <div class="form-group form-md-line-input has-info">
                             @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
                             <div class="col-md-4">
