--- a/BlackSys/Views/AdminUsers/Edit.cshtml
+++ b/BlackSys/Views/AdminUsers/Edit.cshtml
@@ -36,36 +36,42 @@
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
-
-                        <div class="form-group form-md-line-input has-info">
+                           <div class="form-group form-md-line-input has-info">
+                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                            <div class="col-md-4">
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                <div class="form-control-focus"> </div>
+                            </div>
+                        </div>
+                        @*<div class="form-group form-md-line-input has-info">
                             @Html.LabelFor(model => model.Address, null, new { @class = "control-label col-md-2", @placeholder = "password" })
                             <div class="col-md-4">
                                 @Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
                                 <div class="form-control-focus"> </div>
                             </div>
-                        </div>
-                        <div class="form-group  form-md-line-input has-info">
+                        </div>*@
+                        @*<div class="form-group  form-md-line-input has-info">
                             @Html.LabelFor(model => model.State, new { @class = "control-label col-md-2" })
                             <div class="col-md-4">
                                 @Html.TextBoxFor(m => m.State, new { @class = "form-control" })
                                 <div class="form-control-focus"> </div>
                             </div>
-                        </div>
-                        <div class="form-group form-md-line-input has-info">
+                        </div>*@
+                        @*<div class="form-group form-md-line-input has-info">
                             @Html.LabelFor(model => model.PostalCode, new { @class = "control-label col-md-2" })
                             <div class="col-md-4">
                                 @Html.TextBoxFor(m => m.PostalCode, new { @class = "form-control" })
                                 <div class="form-control-focus"> </div>
                             </div>
-                        </div>
+                        </div>*@
 
-                        <div class="form-group form-md-line-input has-info">
+                        @*<div class="form-group form-md-line-input has-info">
                             @Html.LabelFor(model => model.PasswordHash, new { @class = "control-label col-md-2" })
                             <div class="col-md-4">
                                 @Html.TextBoxFor(m => m.PasswordHash, new { @class = "form-control" })
                                 <div class="form-control-focus"> </div>
                             </div>
-                        </div>
+                        </div>*@
                        
                         <div class="form-group form-md-line-input has-info">
                             <label class="col-md-2 control-label">
