--- a/BlackSys/Views/Docentes/Details.cshtml
+++ b/BlackSys/Views/Docentes/Details.cshtml
@@ -16,7 +16,7 @@
     <script src="~/Scripts/Controller/Root/Docentes/Details.js"></script>
     <link href="~/assets/Exportar Js/tableexport.css" rel="stylesheet" />
     @*<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>*@
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js"></script>-->
 
 
 </head>
