--- a/BlackSys/Views/Asignatura/Index.cshtml
+++ b/BlackSys/Views/Asignatura/Index.cshtml
@@ -8,6 +8,7 @@
 
 <p>
     <a type="bu" class="btn btn-circle btn-primary" href=/Asignatura/Nuevo><i class="fa fa-plus-square"></i> Agregar Nuevo</a>
+    @*@Html.ActionLink("Detalles", "Details", new { Id = item.Id }, new { @class = "btn btn-primary details-link", data_toggle = "modal", data_target = "#myModal" })*@
     @*<button class="btn btn-circle btn-primary" onclick="exportTableToExcel('sys-table')">Exportar Excel</button>*@
 </p>
 
@@ -71,8 +72,8 @@
     }
 </style>
 
-<script type="text/javascript">
+@*<script type="text/javascript">
     $(window).load(function () {
         $(".loader").fadeOut("slow");
     });
-</script>
+</script>*@
