--- a/BlackSys/Views/Docentes/Index.cshtml
+++ b/BlackSys/Views/Docentes/Index.cshtml
@@ -71,8 +71,8 @@
     }
 </style>
 
-<script type="text/javascript">
+@*<script type="text/javascript">
     $(window).load(function () {
         $(".loader").fadeOut("slow");
     });
-</script>
+</script>*@
