--- a/BlackSys/Views/Home/LoadMenu.cshtml
+++ b/BlackSys/Views/Home/LoadMenu.cshtml
@@ -4,7 +4,12 @@
     if (menu.ParentMenuID == 0)
     {
         <li class="nav-item  ">
-            <a href="javascript:;" class="nav-link nav-toggle">
+            @*<a href="javascript:;" class="nav-link nav-toggle">
+                    <i class="@menu.MenuIcon"></i>
+                    <span class="title">@menu.DisplayName</span>
+                    <span class="arrow"></span>
+                </a>*@
+            <a href="@menu.MenuURL" class="nav-link nav-toggle">
                 <i class="@menu.MenuIcon"></i>
                 <span class="title">@menu.DisplayName</span>
                 <span class="arrow"></span>
@@ -19,17 +24,17 @@
                         {
                             if (childx.ParentMenuID == menu.MenuID)
                             {
-                            <li class="nav-item  ">
-                                <a href="@childx.MenuURL" class="nav-link ">
-                                    <span class="title">@childx.DisplayName</span>
-                                </a>
-                            </li>
+                                <li class="nav-item  ">
+                                    <a href="@childx.MenuURL" class="nav-link ">
+                                        <span class="title">@childx.DisplayName</span>
+                                    </a>
+                                </li>
                             }
                         }
                     </ul>
                 }
             }
-           
+
         </li>
     }
 }
